# gemma-py

./: .gitignore  LICENSE  Makefile  README.md  azure-pipelines.yml  pip-freeze.txt  setup.cfg
docs/: .buildinfo  basic_usage.html  bearings.html  cartographers.html  compasses.html  courses.html  example_objects.html  exceptions.html  extending.html  extension_xml.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  surveyors.html
docs/_modules/: index.html
docs/_modules/gemma/: _bearings.html  _cartogrpaher.html  _compass.html  _course.html  _exceptions.html  _surveyor.html  test_objects.html
docs/_modules/gemma/extensions/xml/: _xcompass.html  _xcourse.html  _xelm_bearing.html
docs/_sources/: basic_usage.rst.txt  bearings.rst.txt  cartographers.rst.txt  compasses.rst.txt  courses.rst.txt  example_objects.rst.txt  exceptions.rst.txt  extension_xml.rst.txt  index.rst.txt  surveyors.rst.txt
gemma/: __init__.py  _bearings.py  _cartogrpaher.py  _compass.py  _course.py  _exceptions.py  _surveyor.py  test_objects.py
gemma/extensions/: typing.py
gemma/extensions/xml/: __init__.py  _xcompass.py  _xcourse.py  _xelm_bearing.py  _xsurveyor.py
junit/: test-results.xml
zdevelop/make_scripts/: make_name.py  make_venv.py
zdevelop/tests/: conftest.py  test_bearings.py  test_cartogrpaher.py  test_compass.py  test_course.py  test_exceptions.py  test_surveyor.py  test_test_objects.py
zdevelop/tests/test_extensions/: test_xml.py
zdocs/source/: conf-template  conf.py  extending.rst
