[version]
target = 1.2
release = 1.2.1

[metadata]
name = gemma
description = simple data mapping tools
author = Billy Peake

[options]
setup_requires = 
	setuptools
install_requires = 
	dataclasses
tests_require = 
	pytest

[options.extras_require]
dev = 
	black
	autopep8
lint = 
	black
	flake8
	mypy
doc = 
	sphinx
	sphinx-autodoc-typehints
	sphinx_rtd_theme
build = 
	twine
	wheel
test = 
	pytest-sugar
	pytest-cov
	pytest-html

[flake8]
max-line-length = 88
max-complexity = 10
exclude = 
	*/venvs/*,
	docs/conf.py,
	build,
	dist,
	.git,
	__pycache__,
	tests,
	.tox,
	.eggs,
	.coverage,
	*.egg,
	*_cache
	tests/_reports
	zdevelop/scratch

[pep8]
max-line-length = 88

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
show_error_context = True
no_implicit_optional = True
warn_redundant_casts = True

[mypy-pytest,setuptools]
ignore_missing_imports = True

[mypy-zdevelop.scratch.*]
ignore_errors = True

[tool:pytest]
testpaths = zdevelop/tests
addopts = 
	--cov
	--cov-report=html
	--cov-report=xml:zdevelop/tests/_reports/coverage.xml
	--html=zdevelop/tests/_reports/test_results.html
	--self-contained-html

[coverage:run]
source = gemma

[coverage:html]
directory = zdevelop/tests/_reports/coverage
title = coverage report for gemma

[build_sphinx]
project = gemma
copyright = '2018, Illuscio'
source-dir = ./zdocs/source
build-dir = ./zdocs/build

